# Andreev_KNFK

./: CMakeLists.txt  README.md  collision.cpp  collision.h  energy.cpp  init_sys.cpp  init_sys.h  input.cpp  input.h  main.cpp  main.py  particle.cpp  particle.h  print.cpp  print.h  read.py  read2.py  simulation.cpp  simulation.h  variables.txt  vector.cpp  vector.h  visualisation.py
